--- a/0508.ipynb
+++ b/0508.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDvth+5ZCkeoT0lh5iRTQG",
+      "authorship_tag": "ABX9TyNbqQZ5VpZ5J2EKYdU+EO32",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "460XFYGqjMKS",
-        "outputId": "6334bb08-3ab2-4f2f-ffbd-c2da080e35da"
+        "id": "Awnukus8vG3g",
+        "outputId": "c056bdd0-cba1-440b-d1c5-c4fe35a80ace"
       },
       "outputs": [
         {
@@ -61,32 +61,32 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input(\"請輸入成績\"))\n",
+        "a=int(input(\"請輪入成績\"))\n",
         "if a>=90:\n",
-        "  print(\"A\")\n",
+        "  print (\"'A\")\n",
         "elif 80<=a<=89:\n",
-        "  print(\"B\")\n",
+        "  print (\"B\")\n",
         "elif 70<=a<=79:\n",
-        "  print(\"C\")\n",
+        "  print (\"C\")\n",
         "elif 60<=a<=69:\n",
-        "  print(\"D\")\n",
+        "  print (\"D\")\n",
         "else:\n",
-        "  print(\"E\")"
+        "  print (\"E\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lUZNzA8anaPU",
-        "outputId": "dd189293-1261-4658-f63c-ad64613145c3"
+        "id": "oxdO1HN7vL77",
+        "outputId": "cbdc2843-5e9d-4bc9-b655-6e65c3963856"
       },
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入成績79\n",
+            "請輪入成績79\n",
             "C\n"
           ]
         }
@@ -95,7 +95,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input(\"請輸入月份\"))\n",
+        "a=int(input(\"請翰入月份\"))\n",
         "if a==3 or a==4 or a==5:\n",
         "  print(a,\"月是春天\")\n",
         "elif a==6 or a==7 or a==8:\n",
@@ -111,17 +111,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "D0DzxU9YnacS",
-        "outputId": "c058530c-8b53-44e7-bebc-83140675304b"
+        "id": "IWift-z-vujV",
+        "outputId": "8c2d6074-b261-4372-f369-5a5a3bfe3a41"
       },
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入月份8\n",
-            "8 月是夏天\n"
+            "請翰入月份6\n",
+            "6 月是夏天\n"
           ]
         }
       ]
