--- a/0508.ipynb
+++ b/0508.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbqQZ5VpZ5J2EKYdU+EO32",
+      "authorship_tag": "ABX9TyNBG43+XONiMG0gYNsGEWQQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,7 +80,7 @@
         "id": "oxdO1HN7vL77",
         "outputId": "cbdc2843-5e9d-4bc9-b655-6e65c3963856"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input(\"請翰入月份\"))\n",
+        "a=int(input(\"請輸入月份\"))\n",
         "if a==3 or a==4 or a==5:\n",
         "  print(a,\"月是春天\")\n",
         "elif a==6 or a==7 or a==8:\n",
@@ -114,7 +114,7 @@
         "id": "IWift-z-vujV",
         "outputId": "8c2d6074-b261-4372-f369-5a5a3bfe3a41"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
