--- a/0508.ipynb
+++ b/0508.ipynb
@@ -22,7 +22,30 @@
         "id": "view-in-github",
         "colab_type": "text"
       },
-   
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sv0212/introduction-to-computers/blob/main/0508.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Awnukus8vG3g",
+        "outputId": "26836702-d78c-4edb-eaa6-c53ddc64f892"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入體溫36\n",
+            "體溫正常！\n"
+          ]
+        }
+      ],
       "source": [
         "a=float(input(\"請輸入體溫\"))\n",
         "if a>=37.5:\n",
@@ -55,15 +78,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oxdO1HN7vL77",
-        "outputId": "cbdc2843-5e9d-4bc9-b655-6e65c3963856"
+        "outputId": "c3ea28c1-fed5-4a29-e89b-0cf5d0703a9a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輪入成績79\n",
+            "請輪入成績70\n",
             "C\n"
           ]
         }
@@ -89,15 +112,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IWift-z-vujV",
-        "outputId": "8c2d6074-b261-4372-f369-5a5a3bfe3a41"
+        "outputId": "62819870-614c-464d-a61a-db6c608af114"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請翰入月份6\n",
+            "請輸入月份6\n",
             "6 月是夏天\n"
           ]
         }
